--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ h6 {
 }
 
 #background {
-    height: 100%;
+    height: 804px;
     padding: 1rem;
     background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center top fixed;
     background-size: 100% auto;
