--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ h6 {
 #background {
     height: 804px;
     padding: 1rem;
-    background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center top fixed;
+    background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Banner.png') no-repeat center top fixed;
     background-size: 100% auto;
 }
 
