--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 
 * {
     color: var(--text-color);
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
 html {
